snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.jar.sha1
97a70174805c7689ca0be831d774d9208bddbdae